@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-26T08:07:25Z",
-  "count_outdated" : 43,
-  "uniques_outdated" : 37,
-  "count" : 48,
-  "uniques" : 40,
+  "timestamp" : "2022-08-26T16:01:47Z",
+  "count_outdated" : 49,
+  "uniques_outdated" : 42,
+  "count" : 53,
+  "uniques" : 44,
   "clones" : [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 6 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 5 ]
-    },
     {
       "timestamp": "2022-08-18T00:00:00Z",
       "count": 2,
